ASSERTION FAILED: Component at index 1 is 1.000000 and is greater than the allowed maximum 1.000000 https://bugs.webkit.org/show_bug.cgi?id=226118 <rdar://problem/78333590>

Reviewed by Sam Weinig.

Covered by SampledPageTopColor tests.

* platform/graphics/cg/ColorCG.cpp:
(WebCore::roundAndClampToSRGBALossy):
Use `makeFromComponentsClamping` to actually clamp the component values instead of assuming
that the `CGColorRef` will be sRGB (though it still assumes an RGB color space/format).


Canonical link: https://commits.webkit.org/238052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277919 268f45cc-cd09-0410-ab3c-d52691b4dbfc